...
            style: TextStyle(fontSize: 18.0, fontWeight: FontWeight.bold),
          ),
          SizedBox(height: 8.0),
          Text(animeDetail.synopsis),
          SizedBox(height: 16.0),
          Text(
            'Characters',
            style: TextStyle(fontSize: 18.0, fontWeight: FontWeight.bold),
          ),
          SizedBox(height: 8.0),
          _buildCharacterList(animeDetail.characters),
        ],
      ),
...
