...
    );
  }

  AppBar _buildAppBar() {
    return AppBar(
      title: Text(
        'Top Anime',
        style: TextStyle(
          fontSize: 24.0,
          fontWeight: FontWeight.bold,
        ),
      ),
      centerTitle: true,
...
